# OperateWechatWithPlugins

./: LICENSE  README.md  pyproject.toml
ReadyFiles/: CommonCommands.py  CommonFilters.py  CommonResponsers.py  OWCP4b2.py  WxTaskQueue.py
src/: __init__.py  core.py  queue.py
src/plugins/: common_commands.py  common_responsers.py
